# peek

./: .gitignore  DOM_SNAPSHOT_PLAN.md  README.md  pyproject.toml
captures/: .gitignore
src/: cli.py  mcp_server.py  redact.py  screenshot.py  server.py
static/: VENDOR.md  inspector.js
tests/: conftest.py  test_bridge_server.py  test_cli.py  test_dom_context.py  test_e2e.py  test_faithful_capture.py  test_mcp_tools.py  test_paths.py  test_redact.py  test_screenshot.py  test_security.py  test_select_ux.py
tests/e2e/: conftest.py  test_bookmarklet.py  test_bridge.py  test_errors.py  test_v0515.py  utils.py
tests/e2e/fixtures/: js_modified_page.html  large_dom_page.html  lazy_images.html  test_page.html  webfont_page.html
