[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-inspector"
version = "0.1.0"
description = "Let AI agents see your UI — point at elements, annotate, and get instant visual context for AI-powered code editing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "playwright>=1.40.0",
]

[project.scripts]
ui-inspector = "src.cli:main"

[project.urls]
Homepage = "https://github.com/user/ui-inspector"
