[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peek"
version = "0.1.0"
description = "Let AI agents see your UI — point at elements, annotate, and get instant visual context for AI-powered code editing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "playwright>=1.40.0",
    "mcp>=1.20.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "static"]

[project.scripts]
peek = "src.cli:main"

[project.urls]
Homepage = "https://github.com/zly1203/peek"
